--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>com.PhoneGap.c2dm</title>
+    <meta charset="utf-8" />
+    <meta name="format-detection" content="telephone=no" />
+    <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
+    <meta name="viewport" content="user-scalable=yes, initial-scale=1, maximum-scale=2, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
+    <title>Zácpa warning</title>
 </head>
 <body>
 
@@ -9,152 +13,36 @@
 <script type="text/javascript" charset="utf-8" src="js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="PushNotification.js"></script>
 <script type="text/javascript" src="phonegap.js"></script>
+<script type="text/javascript" src="js/scripts.js"></script>
 <script type="text/javascript">
 
-    /*
     if (navigator.userAgent.match(/(iPhone|iPod|iPad|Android|BlackBerry|IEMobile)/)) {
         document.addEventListener("deviceready", onDeviceReady, false);
     } else {
-        window.addEventListener('load', function() {
-            onDeviceReady();
-        }, false);
+        window.addEventListener("load", onDeviceReady, false);
     }
-*/
-    document.addEventListener("deviceready", onDeviceReady, false);
-    //onDeviceReady();
-
-    var pushNotification;
-
-    function onDeviceReady() {
-        alert("onDeviceReady");
-
-        $("#app-status-ul").append('<li>deviceready event received</li>');
-
-        document.addEventListener("backbutton", function(e)
-        {
-            $("#app-status-ul").append('<li>backbutton event received</li>');
-
-            if( $("#home").length > 0)
-            {
-                // call this to get a new token each time. don't call it to reuse existing token.
-                //pushNotification.unregister(successHandler, errorHandler);
-                e.preventDefault();
-                navigator.app.exitApp();
-            }
-            else
-            {
-                navigator.app.backHistory();
-            }
-        }, false);
-
-        try
-        {
-            pushNotification = window.plugins.pushNotification;
-            if (device.platform == 'android' || device.platform == 'Android') {
-                $("#app-status-ul").append('<li>registering android</li>');
-                alert("android reg");
-                pushNotification.register(successHandler, errorHandler, {"senderID":"131911362908","ecb":"onNotificationGCM"});		// required!
-            } else {
-                $("#app-status-ul").append('<li>registering iOS</li>');
-                pushNotification.register(tokenHandler, errorHandler, {"badge":"true","sound":"true","alert":"true","ecb":"onNotificationAPN"});	// required!
-            }
-        }
-        catch(err)
-        {
-            txt="There was an error on this page.\n\n";
-            txt+="Error description: " + err.message + "\n\n";
-            alert(txt);
-        }
-    }
-
-    // handle APNS notifications for iOS
-    function onNotificationAPN(e) {
-        if (e.alert) {
-            $("#app-status-ul").append('<li>push-notification: ' + e.alert + '</li>');
-            navigator.notification.alert(e.alert);
-        }
-
-        if (e.sound) {
-            var snd = new Media(e.sound);
-            snd.play();
-        }
-
-        if (e.badge) {
-            pushNotification.setApplicationIconBadgeNumber(successHandler, e.badge);
-        }
-    }
-
-    // handle GCM notifications for Android
-    function onNotificationGCM(e) {
-        $("#app-status-ul").append('<li>EVENT -> RECEIVED:' + e.event + '</li>');
-
-        switch( e.event )
-        {
-            case 'registered':
-                if ( e.regid.length > 0 )
-                {
-                    $("#app-status-ul").append('<li>REGISTERED -> REGID:' + e.regid + "</li>");
-                    // Your GCM push server needs to know the regID before it can push to this device
-                    // here is where you might want to send it the regID for later use.
-                    console.log("regID = " + e.regid);
-                }
-                break;
-
-            case 'message':
-                // if this flag is set, this notification happened while we were in the foreground.
-                // you might want to play a sound to get the user's attention, throw up a dialog, etc.
-                if (e.foreground)
-                {
-                    $("#app-status-ul").append('<li>--INLINE NOTIFICATION--' + '</li>');
-
-                    // if the notification contains a soundname, play it.
-                    var my_media = new Media("/android_asset/www/"+e.soundname);
-                    my_media.play();
-                }
-                else
-                {	// otherwise we were launched because the user touched a notification in the notification tray.
-                    if (e.coldstart)
-                        $("#app-status-ul").append('<li>--COLDSTART NOTIFICATION--' + '</li>');
-                    else
-                        $("#app-status-ul").append('<li>--BACKGROUND NOTIFICATION--' + '</li>');
-                }
-
-                $("#app-status-ul").append('<li>MESSAGE -> MSG: ' + e.payload.message + '</li>');
-                $("#app-status-ul").append('<li>MESSAGE -> MSGCNT: ' + e.payload.msgcnt + '</li>');
-                break;
-
-            case 'error':
-                $("#app-status-ul").append('<li>ERROR -> MSG:' + e.msg + '</li>');
-                break;
-
-            default:
-                $("#app-status-ul").append('<li>EVENT -> Unknown, an event was received and we do not know what it is</li>');
-                break;
-        }
-    }
-
-    function tokenHandler (result) {
-        $("#app-status-ul").append('<li>token: '+ result +'</li>');
-        // Your iOS push server needs to know the token before it can push to this device
-        // here is where you might want to send it the token for later use.
-    }
-
-    function successHandler (result) {
-        $("#app-status-ul").append('<li>success:'+ result +'</li>');
-    }
-
-    function errorHandler (error) {
-        $("#app-status-ul").append('<li>error:'+ error +'</li>');
-    }
-
-    document.addEventListener('deviceready', onDeviceReady, true);
 
 </script>
-<div id="home">
-    <div id="app-status-div">
-        <ul id="app-status-ul">
-            <li>Cordova PushNotification Plugin Demo</li>
-        </ul>
+<div id="main">
+    <div id="info">start</div>
+    <select id="ulice" >
+        <option value="0" selected="selected">VYBERTE ulici</option>
+        <option value="1">neco</option>
+        <option value="2">neco2</option>
+    </select>
+    <select id="ulice" >
+        <option value="0">VYBERTE upozorneni od stavu</option>
+        <option value="1">1</option>
+        <option value="2">2</option>
+    </select>
+    <input id="zmenitNastaveniButton" type="button" value="Změnit nastavení" onclick="serverSend()">
+    <input id="registraceButton" type="button" value="Zaregistrovat k přijímání zpráv" onclick="registerFake()">
+    <div id="home">
+        <div id="app-status-div">
+            <ul id="app-status-ul">
+                <li>Cordova PushNotification Plugin Demo</li>
+            </ul>
+        </div>
     </div>
 </div>
 </body>
