registrace do CRX

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Zácpa warning</title>
 </head>
 <body>
-
+<link rel="stylesheet" href="css/index.css" />
 <!--<script type="text/javascript" charset="utf-8" src="cordova-2.2.0.js"></script>-->
 <script type="text/javascript" charset="utf-8" src="js/jquery-1.8.3.min.js"></script>
 <script type="text/javascript" src="PushNotification.js"></script>
@@ -23,7 +23,10 @@
     }
 
 </script>
-<div id="main">
+<div id="main" style="
+    font-size: 150%;
+    line-height: 150%;
+">
     <div id="info">start</div>
     <select id="ulice" >
         <option value="0" selected="selected">VYBERTE ulici</option>
