registrace do CRX

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         </li>
 
         <input id="zmenitNastaveniButton" type="button" value="Změnit nastavení" onclick="nastaveniZmena()">
+        <input id="localStorageDelete" type="button" value="localStorageDelete" onclick="localStorageDelete()">
     </ul>
 
 
